# siamese-protein-structures

./: .gitignore  README.md  main.py  model.pt  pyproject.toml  training.ipynb
notebooks/: embeddings_viz.ipynb
scripts/: build_dataset.py  dataset.py  extract_embeddings.py  model.py  process_structures.py
